--- a/TutorDot_iOS_1/TutorDot_iOS/Cells/TutorCollectionViewCell.xib
+++ b/TutorDot_iOS_1/TutorDot_iOS/Cells/TutorCollectionViewCell.xib
@@ -31,40 +31,55 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6xF-2a-dsA">
                         <rect key="frame" x="111" y="18" width="268" height="87"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="류세화 튜티의 수학 과외" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qYC-hz-W8Z">
-                                <rect key="frame" x="23" y="8" width="131.5" height="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="류세화 튜티의 수학 과외" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qYC-hz-W8Z">
+                                <rect key="frame" x="23" y="12" width="131.5" height="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="17" id="cye-dp-NBT"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="강남역" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qud-Di-Q0s">
-                                <rect key="frame" x="42.5" y="45" width="29" height="14"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="강남역" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qud-Di-Q0s">
+                                <rect key="frame" x="39.5" y="49" width="29" height="14"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="calenderSeletionImgLocation" translatesAutoresizingMaskIntoConstraints="NO" id="cgv-2W-Ctq">
-                                <rect key="frame" x="23" y="43" width="13.5" height="16"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calenderSeletionImgLocation" translatesAutoresizingMaskIntoConstraints="NO" id="cgv-2W-Ctq">
+                                <rect key="frame" x="23" y="49" width="13.5" height="13"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="6회차, 2시간" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6M4-Zg-R7Z">
-                                <rect key="frame" x="23" y="26" width="59" height="14"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6회차, 2시간" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6M4-Zg-R7Z">
+                                <rect key="frame" x="23" y="32" width="59" height="14"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="14" id="JFj-Sy-V2o"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calenderImgYellow" translatesAutoresizingMaskIntoConstraints="NO" id="LJx-Xt-9zi">
+                                <rect key="frame" x="3" y="13.5" width="14" height="14"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="14" id="7ah-zr-Hur"/>
+                                    <constraint firstAttribute="height" constant="14" id="a3t-B3-Yf6"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="LJx-Xt-9zi" firstAttribute="centerY" secondItem="qYC-hz-W8Z" secondAttribute="centerY" id="COa-Wk-rjO"/>
                             <constraint firstItem="6M4-Zg-R7Z" firstAttribute="leading" secondItem="6xF-2a-dsA" secondAttribute="leading" constant="23" id="IS0-Xg-vmE"/>
                             <constraint firstItem="qYC-hz-W8Z" firstAttribute="leading" secondItem="6xF-2a-dsA" secondAttribute="leading" constant="23" id="KhU-AY-L3E"/>
                             <constraint firstItem="cgv-2W-Ctq" firstAttribute="top" secondItem="6M4-Zg-R7Z" secondAttribute="bottom" constant="3" id="MDu-ip-JP8"/>
                             <constraint firstAttribute="height" constant="87" id="MHs-eU-nga"/>
-                            <constraint firstItem="qud-Di-Q0s" firstAttribute="leading" secondItem="cgv-2W-Ctq" secondAttribute="trailing" constant="6" id="OUy-xi-JLB"/>
-                            <constraint firstItem="qud-Di-Q0s" firstAttribute="top" secondItem="6M4-Zg-R7Z" secondAttribute="bottom" constant="5" id="aiZ-Ls-Iah"/>
-                            <constraint firstItem="6M4-Zg-R7Z" firstAttribute="top" secondItem="qYC-hz-W8Z" secondAttribute="bottom" constant="1" id="elQ-pS-m89"/>
+                            <constraint firstItem="qud-Di-Q0s" firstAttribute="leading" secondItem="cgv-2W-Ctq" secondAttribute="trailing" constant="3" id="OUy-xi-JLB"/>
+                            <constraint firstItem="LJx-Xt-9zi" firstAttribute="leading" secondItem="6xF-2a-dsA" secondAttribute="leading" constant="3" id="R29-aV-mTP"/>
+                            <constraint firstItem="qud-Di-Q0s" firstAttribute="top" secondItem="6M4-Zg-R7Z" secondAttribute="bottom" constant="3" id="aiZ-Ls-Iah"/>
+                            <constraint firstItem="6M4-Zg-R7Z" firstAttribute="top" secondItem="qYC-hz-W8Z" secondAttribute="bottom" constant="3" id="elQ-pS-m89"/>
                             <constraint firstItem="cgv-2W-Ctq" firstAttribute="leading" secondItem="6xF-2a-dsA" secondAttribute="leading" constant="23" id="lbh-w0-mhA"/>
-                            <constraint firstItem="qYC-hz-W8Z" firstAttribute="top" secondItem="6xF-2a-dsA" secondAttribute="top" constant="8" id="opv-ko-IZN"/>
-                            <constraint firstAttribute="bottom" secondItem="cgv-2W-Ctq" secondAttribute="bottom" constant="28" id="uJG-Ns-CKF"/>
+                            <constraint firstItem="qYC-hz-W8Z" firstAttribute="top" secondItem="6xF-2a-dsA" secondAttribute="top" constant="12" id="opv-ko-IZN"/>
+                            <constraint firstAttribute="bottom" secondItem="cgv-2W-Ctq" secondAttribute="bottom" constant="25" id="uJG-Ns-CKF"/>
                             <constraint firstAttribute="width" constant="268" id="vcg-hn-jhR"/>
                         </constraints>
                     </view>
@@ -93,6 +108,7 @@
         </collectionViewCell>
     </objects>
     <resources>
+        <image name="calenderImgYellow" width="15" height="15"/>
         <image name="calenderSeletionImgLocation" width="13.5" height="14"/>
     </resources>
 </document>
