--- a/TutorDot_iOS_1/TutorDot_iOS/Storyboards/Calendar.storyboard
+++ b/TutorDot_iOS_1/TutorDot_iOS/Storyboards/Calendar.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -155,35 +154,55 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="432"/>
                                                 <subviews>
                                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="hDe-Zy-BfX" userLabel="TutorCollectionView">
-                                                        <rect key="frame" x="0.0" y="50" width="375" height="382"/>
+                                                        <rect key="frame" x="0.0" y="60" width="375" height="372"/>
                                                         <color key="backgroundColor" red="0.96078431369999995" green="0.96470588239999999" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="k7P-6a-vSk">
                                                             <size key="itemSize" width="375" height="110"/>
-                                                            <size key="headerReferenceSize" width="50" height="50"/>
+                                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                         </collectionViewFlowLayout>
-                                                        <cells>
-                                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ZgF-3J-huK">
-                                                                <rect key="frame" x="0.0" y="50" width="375" height="110"/>
-                                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="PA4-kn-XiW">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="110"/>
-                                                                    <autoresizingMask key="autoresizingMask"/>
-                                                                </collectionViewCellContentView>
-                                                                <size key="customSize" width="375" height="110"/>
-                                                            </collectionViewCell>
-                                                        </cells>
-                                                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="j9I-Sv-KRk">
-                                                            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
-                                                            <autoresizingMask key="autoresizingMask"/>
-                                                        </collectionReusableView>
+                                                        <cells/>
                                                     </collectionView>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="57W-ab-Yom">
+                                                        <rect key="frame" x="15" y="21" width="63" height="57"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="29" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x7O-58-mAU">
+                                                                <rect key="frame" x="7.9999999999999982" y="7.9999999999999982" width="28.333333333333329" height="26.333333333333329"/>
+                                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5월" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fU6-Kr-p5i">
+                                                                <rect key="frame" x="8.0000000000000018" y="37.333333333333314" width="20.666666666666671" height="17"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                        <color key="backgroundColor" red="0.96078431369999995" green="0.96470588239999999" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="63" id="2EC-BF-Uvl"/>
+                                                            <constraint firstItem="x7O-58-mAU" firstAttribute="leading" secondItem="57W-ab-Yom" secondAttribute="leading" constant="8" id="911-rK-zl4"/>
+                                                            <constraint firstItem="fU6-Kr-p5i" firstAttribute="leading" secondItem="x7O-58-mAU" secondAttribute="leading" id="e3T-dZ-Lfv"/>
+                                                            <constraint firstItem="x7O-58-mAU" firstAttribute="top" secondItem="57W-ab-Yom" secondAttribute="top" constant="8" id="edJ-X9-P9P"/>
+                                                            <constraint firstItem="fU6-Kr-p5i" firstAttribute="top" secondItem="x7O-58-mAU" secondAttribute="bottom" constant="3" id="iOS-Hd-7fd"/>
+                                                            <constraint firstItem="fU6-Kr-p5i" firstAttribute="leading" secondItem="57W-ab-Yom" secondAttribute="leading" constant="8" id="rWa-qn-gSC"/>
+                                                            <constraint firstAttribute="height" constant="57" id="wPM-gs-q52"/>
+                                                        </constraints>
+                                                    </view>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calenderSeletionImgLine" translatesAutoresizingMaskIntoConstraints="NO" id="RrB-A6-QCn">
+                                                        <rect key="frame" x="90.333333333333343" y="41.333333333333314" width="284.66666666666663" height="1.6666666666666643"/>
+                                                    </imageView>
                                                 </subviews>
                                                 <color key="backgroundColor" red="0.96078431372549022" green="0.96470588235294119" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
-                                                    <constraint firstItem="hDe-Zy-BfX" firstAttribute="top" secondItem="G3B-gq-SCb" secondAttribute="top" constant="50" id="G4X-Pf-ypm"/>
+                                                    <constraint firstItem="hDe-Zy-BfX" firstAttribute="top" secondItem="G3B-gq-SCb" secondAttribute="top" constant="60" id="G4X-Pf-ypm"/>
+                                                    <constraint firstItem="RrB-A6-QCn" firstAttribute="centerY" secondItem="x7O-58-mAU" secondAttribute="centerY" id="bBY-VX-Owc"/>
+                                                    <constraint firstItem="57W-ab-Yom" firstAttribute="leading" secondItem="G3B-gq-SCb" secondAttribute="leading" constant="15" id="bkC-gX-X1f"/>
+                                                    <constraint firstAttribute="trailing" secondItem="RrB-A6-QCn" secondAttribute="trailing" id="iql-eQ-Jl5"/>
                                                     <constraint firstAttribute="bottom" secondItem="hDe-Zy-BfX" secondAttribute="bottom" id="s2V-2d-09I"/>
+                                                    <constraint firstItem="57W-ab-Yom" firstAttribute="top" secondItem="G3B-gq-SCb" secondAttribute="top" constant="21" id="t7r-jy-7rc"/>
                                                     <constraint firstAttribute="trailing" secondItem="hDe-Zy-BfX" secondAttribute="trailing" id="wC9-Pq-M6B"/>
                                                     <constraint firstItem="hDe-Zy-BfX" firstAttribute="leading" secondItem="G3B-gq-SCb" secondAttribute="leading" id="wCm-Mb-xfj"/>
                                                 </constraints>
@@ -228,7 +247,9 @@
                     <connections>
                         <outlet property="calendarView" destination="o2t-nI-yDl" id="5bV-oi-KlD"/>
                         <outlet property="dateCollectionView" destination="N3n-rm-NLU" id="nLN-cS-jUY"/>
+                        <outlet property="dateHeaderLabel" destination="x7O-58-mAU" id="sd7-qx-Eqe"/>
                         <outlet property="leftButton" destination="OME-fv-ddV" id="iOa-EL-oE7"/>
+                        <outlet property="monthHeaderLabel" destination="fU6-Kr-p5i" id="49h-sZ-R3d"/>
                         <outlet property="rightButton" destination="Wrn-6R-Jo3" id="giU-5q-tk6"/>
                         <outlet property="topDateButton" destination="sx2-t5-cf7" id="wDH-FX-VVE"/>
                         <outlet property="tutorCollectionView" destination="hDe-Zy-BfX" id="9dR-VD-uIv"/>
@@ -239,4 +260,7 @@
             <point key="canvasLocation" x="92" y="67.241379310344826"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="calenderSeletionImgLine" width="284.66665649414062" height="1.6666666269302368"/>
+    </resources>
 </document>
