--- a/TutorDot_iOS_1/TutorDot_iOS/Cells/TutorCollectionViewCell.xib
+++ b/TutorDot_iOS_1/TutorDot_iOS/Cells/TutorCollectionViewCell.xib
@@ -29,7 +29,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6xF-2a-dsA">
-                        <rect key="frame" x="111" y="18" width="268" height="87"/>
+                        <rect key="frame" x="104" y="18" width="275" height="87"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="류세화 튜티의 수학 과외" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qYC-hz-W8Z">
                                 <rect key="frame" x="23" y="12" width="131.5" height="17"/>
@@ -37,17 +37,17 @@
                                     <constraint firstAttribute="height" constant="17" id="cye-dp-NBT"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="강남역" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qud-Di-Q0s">
-                                <rect key="frame" x="39.5" y="49" width="29" height="14"/>
+                                <rect key="frame" x="37.5" y="54" width="29" height="14"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calenderSeletionImgLocation" translatesAutoresizingMaskIntoConstraints="NO" id="cgv-2W-Ctq">
-                                <rect key="frame" x="23" y="49" width="13.5" height="13"/>
+                                <rect key="frame" x="21" y="54" width="13.5" height="14"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6회차, 2시간" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6M4-Zg-R7Z">
                                 <rect key="frame" x="23" y="32" width="59" height="14"/>
@@ -55,7 +55,7 @@
                                     <constraint firstAttribute="height" constant="14" id="JFj-Sy-V2o"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calenderImgYellow" translatesAutoresizingMaskIntoConstraints="NO" id="LJx-Xt-9zi">
@@ -71,16 +71,15 @@
                             <constraint firstItem="LJx-Xt-9zi" firstAttribute="centerY" secondItem="qYC-hz-W8Z" secondAttribute="centerY" id="COa-Wk-rjO"/>
                             <constraint firstItem="6M4-Zg-R7Z" firstAttribute="leading" secondItem="6xF-2a-dsA" secondAttribute="leading" constant="23" id="IS0-Xg-vmE"/>
                             <constraint firstItem="qYC-hz-W8Z" firstAttribute="leading" secondItem="6xF-2a-dsA" secondAttribute="leading" constant="23" id="KhU-AY-L3E"/>
-                            <constraint firstItem="cgv-2W-Ctq" firstAttribute="top" secondItem="6M4-Zg-R7Z" secondAttribute="bottom" constant="3" id="MDu-ip-JP8"/>
+                            <constraint firstItem="cgv-2W-Ctq" firstAttribute="top" secondItem="6M4-Zg-R7Z" secondAttribute="bottom" constant="8" id="MDu-ip-JP8"/>
                             <constraint firstAttribute="height" constant="87" id="MHs-eU-nga"/>
                             <constraint firstItem="qud-Di-Q0s" firstAttribute="leading" secondItem="cgv-2W-Ctq" secondAttribute="trailing" constant="3" id="OUy-xi-JLB"/>
                             <constraint firstItem="LJx-Xt-9zi" firstAttribute="leading" secondItem="6xF-2a-dsA" secondAttribute="leading" constant="3" id="R29-aV-mTP"/>
-                            <constraint firstItem="qud-Di-Q0s" firstAttribute="top" secondItem="6M4-Zg-R7Z" secondAttribute="bottom" constant="3" id="aiZ-Ls-Iah"/>
+                            <constraint firstItem="qud-Di-Q0s" firstAttribute="top" secondItem="6M4-Zg-R7Z" secondAttribute="bottom" constant="8" id="aiZ-Ls-Iah"/>
                             <constraint firstItem="6M4-Zg-R7Z" firstAttribute="top" secondItem="qYC-hz-W8Z" secondAttribute="bottom" constant="3" id="elQ-pS-m89"/>
-                            <constraint firstItem="cgv-2W-Ctq" firstAttribute="leading" secondItem="6xF-2a-dsA" secondAttribute="leading" constant="23" id="lbh-w0-mhA"/>
+                            <constraint firstItem="cgv-2W-Ctq" firstAttribute="leading" secondItem="6xF-2a-dsA" secondAttribute="leading" constant="21" id="lbh-w0-mhA"/>
                             <constraint firstItem="qYC-hz-W8Z" firstAttribute="top" secondItem="6xF-2a-dsA" secondAttribute="top" constant="12" id="opv-ko-IZN"/>
-                            <constraint firstAttribute="bottom" secondItem="cgv-2W-Ctq" secondAttribute="bottom" constant="25" id="uJG-Ns-CKF"/>
-                            <constraint firstAttribute="width" constant="268" id="vcg-hn-jhR"/>
+                            <constraint firstAttribute="width" constant="275" id="vcg-hn-jhR"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -99,6 +98,7 @@
             <connections>
                 <outlet property="classHourLabel" destination="6M4-Zg-R7Z" id="KuK-Aa-Zmq"/>
                 <outlet property="classNameLabel" destination="qYC-hz-W8Z" id="CJD-8j-BHn"/>
+                <outlet property="colorImage" destination="LJx-Xt-9zi" id="7kt-Yh-MQT"/>
                 <outlet property="endTimeLabel" destination="ixb-kb-M5P" id="V4v-Gp-4AY"/>
                 <outlet property="infoView" destination="6xF-2a-dsA" id="1kb-Hp-Cdi"/>
                 <outlet property="locationLabel" destination="qud-Di-Q0s" id="iSx-ta-R65"/>
